[package]
name = "performance_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
tokio-scoped = "0.2.0"
reqwest = "0.11.11"
futures = "0.3.24"
rand = "0.8.5"