[package]
name = "rocust_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
reqwest = "0.11.11"
futures = "0.3.24"
rand = "0.8.5"
parking_lot = "0.12.1"
tokio-util = "0.7.3"
prettytable-rs = "^0.9"