[package]
name = "rocust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocust_lib = { path = "../rocust_lib"}
poem = { version = "1.3.40" }
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = "0.7.3"
parking_lot = "0.12.1"